--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Mukta', sans-serif;
-    background-color: rgba(207, 68, 68, 0.295);
+    /* background-color: rgba(207, 68, 68, 0.295); */
     margin: auto;
     
 }
@@ -9,7 +9,7 @@ section{
 
 }
 
-.name-highlight{
+.orange-highlight{
     color:chocolate
 }
 .half-width{
@@ -22,9 +22,10 @@ section{
     width: 100%;
 }
 .top-banner{
-    border: 1px solid red;
+    border: 1px solid rgb(17, 15, 15);
     background-image: url('image/top-banner.png');
     background-repeat: no-repeat;
+    
 }
 .link-button{
     text-decoration: none;
@@ -35,3 +36,29 @@ section{
     color: white;
     font-weight: 700;
 }
+.bottom-banner{
+    
+    background-image: url('image/dream-bg.png');
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.border{
+    
+    box-shadow: 10px 10px 40px grey;
+    height: 60%;
+}
+.experiance-area{
+    background-image: url('image/exp-bg.png');
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.side-borderleft{
+border-left: 5px solid green;
+}
+.side-borderright{
+    border-left: 5px solid blue;
+    border-color:gra;
+}
+footer{
+    text-align: center;
+}   
